[tool.poetry]
name = "pylauncher"
version = "0.1.0"
description = "A python launcher and version manager for *NIX systems"
authors = ["AbooMinister25 <aboominister@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"
requests = "^2.26.0"
coverage = "^6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"
taskipy = "^1.9.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "poetry run black pylauncher tests && poetry run isort pylauncher tests"
lint = "poetry run flake8 pylauncher"
test = "poetry run pytest"
coverage = "poetry run coverage run -m pytest"